--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuepress-plugin-cursor-effects": "^1.1.2",
     "vuepress-plugin-flowchart": "^1.5.0",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
-    "vuepress-plugin-ribbon": "^1.1.2"
+    "vuepress-plugin-ribbon": "^1.1.2",
+    "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
