--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "vuepress-plugin-seo": "^0.1.4",
     "vuepress-plugin-sitemap": "^2.3.1",
     "vuepress-theme-reco": "1.6.10"
+  },
+  "engines": {
+    "node": "14.16.0",
+    "npm": "6.14.11"
   }
 }
