--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "VAQ",
   "description": "VAQ的博客",
   "scripts": {
-    "dev": "vuepress dev .",
-    "build": "vuepress build ."
+    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && vuepress dev .",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && vuepress build ."
   },
   "devDependencies": {
     "vuepress": "1.8.2",
@@ -54,7 +54,7 @@
     "vuepress-theme-reco": "1.6.10"
   },
   "engines": {
-    "node": "14.16.0",
-    "npm": "6.14.11"
+    "node": "18.20.0",
+    "npm": "10.5.0"
   }
 }
