--- a/package.json
+++ b/package.json
@@ -5,31 +5,9 @@
   "description": "VAQ的博客",
   "scripts": {
     "dev": "vuepress dev .",
-    "build": "vuepress build ."
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress build ."
   },
   "devDependencies": {
-    "vuepress": "1.8.2",
-    "vuepress-theme-reco": "1.6.10",
-    "@starzkg/vuepress-plugin-baidu-analytics": "^1.1.2",
-    "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
-    "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
-    "@vuepress-reco/vuepress-plugin-pagation": "^1.6.0",
-    "@vuepress/plugin-medium-zoom": "^1.9.7",
-    "esm": "^3.2.25",
-    "markdown-it-disable-url-encode": "^1.0.1",
-    "mdurl": "^1.0.1",
-    "vuepress-plugin-baidu-autopush": "^1.0.1",
-    "vuepress-plugin-boxx": "0.0.7",
-    "vuepress-plugin-cursor-effects": "^1.1.2",
-    "vuepress-plugin-flowchart": "^1.5.0",
-    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
-    "vuepress-plugin-ribbon": "^1.1.2",
-    "vuepress-plugin-ribbon-animation": "^1.1.3",
-    "vuepress-plugin-sakura": "^1.2.1",
-    "vuepress-plugin-sitemap": "^2.3.1",
-    "vuepress-plugin-seo": "^0.1.4"
-  },
-  "dependencies": {
     "@starzkg/vuepress-plugin-baidu-analytics": "^1.1.2",
     "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
     "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
@@ -51,8 +29,28 @@
     "vuepress-plugin-sitemap": "^2.3.1",
     "vuepress-theme-reco": "1.6.10"
   },
-  "engines": {
-    "node": "18.20.0",
-    "npm": "10.5.0"
+  "dependencies": {
+    "@starzkg/vuepress-plugin-baidu-analytics": "^1.1.2",
+    "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
+    "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
+    "@vuepress-reco/vuepress-plugin-pagation": "^1.6.0",
+    "@vuepress/plugin-medium-zoom": "^1.9.7",
+    "esm": "^3.2.25",
+    "markdown-it-disable-url-encode": "^1.0.1",
+    "mdurl": "^1.0.1",
+    "vue": "^2.7.16",
+    "vue-server-renderer": "^2.7.16",
+    "vuepress": "1.8.2",
+    "vuepress-plugin-baidu-autopush": "^1.0.1",
+    "vuepress-plugin-boxx": "0.0.7",
+    "vuepress-plugin-cursor-effects": "^1.1.2",
+    "vuepress-plugin-flowchart": "^1.5.0",
+    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
+    "vuepress-plugin-ribbon": "^1.1.2",
+    "vuepress-plugin-ribbon-animation": "^1.1.3",
+    "vuepress-plugin-sakura": "^1.2.1",
+    "vuepress-plugin-seo": "^0.1.4",
+    "vuepress-plugin-sitemap": "^2.3.1",
+    "vuepress-theme-reco": "1.6.10"
   }
 }
