--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "esm": "^3.2.25",
     "markdown-it-disable-url-encode": "^1.0.1",
     "mdurl": "^1.0.1",
+    "vue": "2.7.16",
+    "vue-server-renderer": "2.7.16",
     "vuepress": "1.8.2",
     "vuepress-plugin-baidu-autopush": "^1.0.1",
     "vuepress-plugin-boxx": "0.0.7",
@@ -27,7 +29,7 @@
     "vuepress-plugin-sakura": "^1.2.1",
     "vuepress-plugin-seo": "^0.1.4",
     "vuepress-plugin-sitemap": "^2.3.1",
-    "vuepress-theme-reco": "1.6.10"
+    "vuepress-theme-reco": "1.6.17"
   },
   "dependencies": {
     "@starzkg/vuepress-plugin-baidu-analytics": "^1.1.2",
@@ -38,19 +40,18 @@
     "esm": "^3.2.25",
     "markdown-it-disable-url-encode": "^1.0.1",
     "mdurl": "^1.0.1",
-    "vue": "^2.7.16",
-    "vue-server-renderer": "^2.7.16",
+    "vue": "2.7.16",
+    "vue-server-renderer": "2.7.16",
     "vuepress": "1.8.2",
     "vuepress-plugin-baidu-autopush": "^1.0.1",
     "vuepress-plugin-boxx": "0.0.7",
     "vuepress-plugin-cursor-effects": "^1.1.2",
     "vuepress-plugin-flowchart": "^1.5.0",
-    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-plugin-ribbon": "^1.1.2",
     "vuepress-plugin-ribbon-animation": "^1.1.3",
     "vuepress-plugin-sakura": "^1.2.1",
     "vuepress-plugin-seo": "^0.1.4",
     "vuepress-plugin-sitemap": "^2.3.1",
-    "vuepress-theme-reco": "1.6.10"
+    "vuepress-theme-reco": "1.6.17"
   }
 }
