修改公告图片

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
     "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
     "@vuepress-reco/vuepress-plugin-pagation": "^1.6.0",
+    "@vuepress-yard/vuepress-plugin-window": "^1.0.10",
     "@vuepress/plugin-medium-zoom": "^1.9.7",
     "esm": "^3.2.25",
     "markdown-it-disable-url-encode": "^1.0.1",
@@ -36,6 +37,7 @@
     "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
     "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
     "@vuepress-reco/vuepress-plugin-pagation": "^1.6.0",
+    "@vuepress-yard/vuepress-plugin-window": "^1.0.10",
     "@vuepress/plugin-medium-zoom": "^1.9.7",
     "esm": "^3.2.25",
     "markdown-it-disable-url-encode": "^1.0.1",
